src/metrics/snapshots/big_code_analysis__metrics__abc__tests__tsx_generic_lt_gt_not_a_condition.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 1.0,
  "branches": 0.0,
  "conditions": 0.0,
  "magnitude": 1.0,
  "assignments_average": 0.5,
  "branches_average": 0.0,
  "conditions_average": 0.0,
  "assignments_min": 0.0,
  "assignments_max": 1.0,
  "branches_min": 0.0,
  "branches_max": 0.0,
  "conditions_min": 0.0,
  "conditions_max": 0.0
}
