src/metrics/snapshots/big_code_analysis__metrics__abc__tests__typescript_arrow_field_contributes_abc.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 1,
  "branches": 1,
  "conditions": 1,
  "magnitude": 1.7320508075688772,
  "assignments_average": 0.3333333333333333,
  "branches_average": 0.3333333333333333,
  "conditions_average": 0.3333333333333333,
  "assignments_min": 0,
  "assignments_max": 1,
  "branches_min": 0,
  "branches_max": 1,
  "conditions_min": 0,
  "conditions_max": 1
}
