src/metrics/snapshots/big_code_analysis__metrics__abc__tests__typescript_branches_function_calls.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 0,
  "branches": 3,
  "conditions": 0,
  "magnitude": 3.0,
  "assignments_average": 0.0,
  "branches_average": 1.0,
  "conditions_average": 0.0,
  "assignments_min": 0,
  "assignments_max": 0,
  "branches_min": 0,
  "branches_max": 3,
  "conditions_min": 0,
  "conditions_max": 0
}
